# Drug-Target-Interaction-Explorer

./: README.md  config.yaml  download_models.sh  pyproject.toml  start.sh
src/dti/: chunk.py  cli.py  config.py  embed.py  generate.py  graph.py  ingest.py  query.py  retrieve.py  store.py
src/dti/sources/: base.py  bindingdb.py  chembl.py  drugbank.py  pubchem.py  uniprot.py
tests/: test_chunk.py  test_cli.py  test_embed.py  test_generate.py  test_graph.py  test_retrieve.py
